--- a/_sass/oneflow/_masthead.scss
+++ b/_sass/oneflow/_masthead.scss
@@ -7,9 +7,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: $background-color;
+  background-color: #fff;
 
-  border-bottom: 1px solid $border-color;
+  border-bottom: 2px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
