--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -3,27 +3,28 @@
    ========================================================================== */
 
 /* Colors */
-$gray                       : #1976d2 !default;
+$gray                       : #430098 !default; // Pantone Violet C
 $dark-gray                  : mix(#000, $gray, 40%) !default;
 $darker-gray                : mix(#000, $gray, 60%) !default;
 $light-gray                 : mix(#fff, $gray, 50%) !default;
-$lighter-gray               : mix(#fff, $gray, 90%) !default;
+$lighter-gray               : $gray !default; // Changed for footer background
 
 $body-color                 : #fff !default;
-$background-color           : #f0fff0 !default;
+$background-color           : #ffffff !default;
 $code-background-color      : $lighter-gray !default;
 $code-background-color-dark : $light-gray !default;
-$text-color                 : $dark-gray !default;
+$text-color                 : #333333 !default;
 $border-color               : $lighter-gray !default;
+$muted-text-color           : #B3282D !default; // Changed for footer icons
 
 $primary-color              : $gray !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
-$danger-color               : #c0392b !default;
+$danger-color               : #B3282D !default; // Pantone 1805C
 $info-color                 : #03a9f4 !default;
 
 /* links */
-$link-color                 : #393e46 !default;
+$link-color                 : $primary-color !default;
 $link-color-hover           : mix(#000, $link-color, 25%) !default;
 $link-color-visited         : mix(#fff, $link-color, 25%) !default;
 $masthead-link-color        : $primary-color !default;
@@ -32,3 +33,5 @@ $masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
 /* notices */
 $notice-background-mix: 90% !default;
 $code-notice-background-mix: 95% !default;
+
+$footer-background-color: $primary-color !default;
