imprint and footer

--- a/_sass/oneflow/_page.scss
+++ b/_sass/oneflow/_page.scss
@@ -263,7 +263,7 @@ text-align: center;
 @media (max-width: 768px) {
   .page__hero,
   .page__hero--overlay {
-    padding-top: 50%;    // 2:1 ratio
+    padding-top: 45%;    // ratio
     background-position: left center;
   }
 }
