--- a/_sass/oneflow/_buttons.scss
+++ b/_sass/oneflow/_buttons.scss
@@ -93,3 +93,12 @@
     font-size: $type-size-7;
   }
 }
+
+.btn--secondary {
+  background-color: #f0f0f0; /* A light grey, assuming this is the default secondary color */
+  color: #333; /* Dark text for contrast */
+
+  &:hover {
+    background-color: mix(#000, #f0f0f0, 10%); /* Slightly darker on hover */
+  }
+}
