--- a/_sass/oneflow/skins/_aqua.scss
+++ b/_sass/oneflow/skins/_aqua.scss
@@ -21,7 +21,7 @@ $primary-color              : $gray !default;
 $success-color              : #27ae60 !default;
 $warning-color              : #e67e22 !default;
 $danger-color               : #B3282D !default; // Pantone 1805C
-$info-color                 : #03a9f4 !default;
+$info-color                 : #B3282D !default; // Changed to brand red
 
 /* links */
 $link-color                 : $primary-color !default;
