--- a/_sass/oneflow/_sections.scss
+++ b/_sass/oneflow/_sections.scss
@@ -25,5 +25,6 @@ section.first-section {
 }
 
 section.alternative-color {
-    background-color: mix($background-color, $primary-color, 50%);
+    background-color: $primary-color;
+    color: white !important;
 }
