--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
